<?xml version="1.0"?>
<package format="2">
  <name>explorer_turtlebot3</name>
  <version>0.0.0</version>
  <description>ROS node for autonomous frontier-based exploration using SLAM and move_base.</description>
  <maintainer email="b.s.hockey@outlook.com">bsh75</maintainer>
  <license>CC0</license>

  <url type="repository">https://github.com/your_username/explorer_turtlebot3</url>  

  <buildtool_depend>catkin</buildtool_depend>  
  <exec_depend>gmapping</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>  
</package>

